--- a/app_api/package.json
+++ b/app_api/package.json
@@ -13,11 +13,13 @@
     "@faker-js/faker": "^8.1.0",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@typegoose/typegoose": "^11.5.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "celebrate": "^15.0.3",
     "chai": "^4.3.10",
     "core-js": "^3.37.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
