--- a/app_api/package.json
+++ b/app_api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@turf/turf": "^6.5.0",
     "@typegoose/typegoose": "^11.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "celebrate": "^15.0.3",
