--- a/app_api/.env.example
+++ b/app_api/.env.example
@@ -1,3 +1,3 @@
-MONGO_URI=
-PORT=
-GOOGLE_API_KEY=
+MONGO_URI='mongodb://root:password@mongodb:27021/oz-tech-test?authSource=admin'
+PORT=3003
+GOOGLE_API_KEY='AIzaSyDSeivvCN1gnuDCUgOPXw5uM9g1EkTy0FY'
